@@ -3,6 +3,7 @@ Secure Core Utilities
 Copyright (C) 2015 Bindle Binaries <syzdek@bindlebinaries.com>.
 
 0.2
+  - core: adding ability to change widget alias prefix at compile time (syzdek)
   - tail: allowing timeout to be modified via env variable TAILTIMEOUT (syzdek)
   - zcat: fixing segfault with LXMA (.xz) and large files (syzdek)
 
